...
            "value" : "Ακύρωση"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancelar"
...
            "value" : "Αποθήκευση"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Guardar"
...
            "value" : "Ομάδες"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Groups"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Grupos"
...
            "value" : "Δίκτυο"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Network"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Red"
...
            "value" : "Σύνταξη μηνύματος"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Compose message"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Redactar mensaje"
...
            "value" : "π.χ. Ρωτήστε για τον νέο ρόλο"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "e.g. Ask about the new role"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ej. Preguntar sobre el nuevo puesto"
...
            "value" : "Δημιούργησε tickle"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Create a tickle"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Crear un tickle"
...
            "value" : "Στείλε μήνυμα"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Send a text"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enviar un texto"
...
